# FileBackup

./: .gitignore  LICENSE  README.md  README_Chinese.md  inspect_file.py  setup.sh
.cache/clangd/index/: backup_system.cpp.FCFD4B809D0C633A.idx  backup_system.h.4B36252F6B19671B.idx  bindings.cpp.FF1587D0838DCB4B.idx  common.h.9BCD5068AD5BF186.idx  compressor.cpp.6A7133B3B3063545.idx  compressor.h.411F01B4F4E95B60.idx  encryptor.cpp.755240468A1A7C10.idx  encryptor.h.711EEE997DF65DA5.idx  file_watcher.cpp.1347C2906BF3EDEB.idx  file_watcher.h.3DC69BE6C9B547D5.idx  filter.h.03653908064E5D6F.idx  packer.cpp.7C2BA3E9F282705C.idx  packer.h.C08260C2B028E0E0.idx  test_backup_system.cpp.1B95ACF457C873B7.idx  test_compressor.cpp.BF70C8F76D5F9DAC.idx  test_encryptor.cpp.5778E15EB00301B5.idx  test_file_watcher.cpp.DE67D6D4664B6D6F.idx  test_integration_1.cpp.92A0771A708A19D7.idx  test_packer.cpp.38EA752FCF4445E8.idx  test_traverser.cpp.3E6666E772F66E52.idx  traverser.cpp.0694608FE067DC0C.idx  traverser.h.8701BB266AEC33FD.idx
core/: CMakeLists.txt
core/include/: backup_system.h  common.h  compressor.h  encryptor.h  filter.h  packer.h  scheduler.h  traverser.h
core/src/: backup_system.cpp  bindings.cpp  compressor.cpp  encryptor.cpp  packer.cpp  scheduler.cpp  traverser.cpp
core/tests/: test_backup_system.cpp  test_compressor.cpp  test_encryptor.cpp  test_integration_1.cpp  test_packer.cpp  test_traverser.cpp
gui/: app.py
test_archive/: link_to_level2  link_to_root.txt  root_file.txt
test_archive/level1/: file_l1.txt
test_archive/level1/level2/: file_l2.txt  link_to_root_up.txt
test_archive/level1/level2/level3/: file_l3.txt
test_complex_fs/: create_socket.py  root.txt
test_complex_fs_1/level1/level2/: config.yaml
test_complex_fs_1/level1/level2/level3/: deep.txt
